changed background-color for root components

--- a/rec.css
+++ b/rec.css
@@ -1,6 +1,7 @@
-.rectangle .anotherClass {
+.rectangle {
   width: 300px;
   height: 250px;
-  background: #d60505;
+  background: #0508d6;
   margin: 300px auto;
+  box-shadow: 0 5px 10px #609595;
 }
