--- a/learn/style.css
+++ b/learn/style.css
@@ -1,26 +1,27 @@
 body {
-  margin: 0;
-
-  background: url("dots.jpg");
-
-  font-family: Arial;
-  line-height: 3;
-  font-size: 18px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
 }
 
-.card {
-  width: 1000px;
-  margin: 40px auto;
-  padding: 20px;
-
-  background-color: #0ef3f3;
-  box-shadow: 0 5px 10px #609595;
-  border-radius: 10px;
+.title {
+  font-size: 40px;
+  color: #f03333;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
-.card-photo {
-  display: block;
-  width: 500px;
-  height: 400px;
-  margin: 0px auto;
+.subtitle {
+  font-size: 30px;
+  color: #12ac11;
+  line-height: 1.2;
+  text-decoration: underline;
+}
+
+.list {
+  font-size: 20px;
+  color: #444;
+  font-style: italic;
+  list-style-type: square;
 }
