Defines a 3D inset border. The effect depends on the border-color value

--- a/learn/style.css
+++ b/learn/style.css
@@ -10,6 +10,8 @@ body {
   color: #f03333;
   line-height: 1.2;
   text-transform: uppercase;
+  border: 5px dashed rgb(95, 4, 4);
+  border-image: url(retro.jpg);
 }
 
 .subtitle {
