overflow property controls what happens to content that is too big to fit into an area

--- a/learn/style.css
+++ b/learn/style.css
@@ -58,3 +58,10 @@ img {
   top: 0px;
   z-index: -1;
 }
+div.scroll {
+  background-color: #eee;
+  width: 50%;
+  height: 100px;
+  border: 1px dotted black;
+  overflow: auto;
+}
