--- a/learn/style.css
+++ b/learn/style.css
@@ -63,5 +63,8 @@ div.scroll {
   width: 50%;
   height: 100px;
   border: 1px dotted black;
-  overflow: auto;
+  overflow: scroll;
+  position: relative;
+  left: 30px;
+  border: 3px solid #73ad21;
 }
