--- a/learn/style.css
+++ b/learn/style.css
@@ -69,3 +69,16 @@ div.scroll {
   left: 30px;
   border: 3px solid #73ad21;
 }
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(21, 14, 22);
+}
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+
+  line-height: 75px;
+}
