--- a/learn/style.css
+++ b/learn/style.css
@@ -71,7 +71,8 @@ div.scroll {
 }
 .flex-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
+  flex-wrap: wrap;
   background-color: rgb(21, 14, 22);
 }
 .flex-container > div {
@@ -79,6 +80,13 @@ div.scroll {
   width: 100px;
   margin: 10px;
   text-align: center;
-
   line-height: 75px;
+}
+span.b {
+  display: inline-block;
+  width: 100px;
+  height: 50px;
+  padding: 5px;
+  border: 1px solid blue;
+  background-color: yellow;
 }
