--- a/learn/style.css
+++ b/learn/style.css
@@ -68,6 +68,7 @@ div.scroll {
   position: relative;
   left: 30px;
   border: 3px solid #73ad21;
+  margin: auto;
 }
 .flex-container {
   display: flex;
@@ -88,5 +89,8 @@ span.b {
   height: 50px;
   padding: 5px;
   border: 1px solid blue;
+  background-color: yellow;
+}
+div > p {
   background-color: yellow;
 }
